05/app-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /profile
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 8000
