05/auth-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8000
      - path: /register
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8000
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8000
      - path: /logout
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8000
      - path: /edit
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8000
